--- a/uitwerking/src/app/profile/profile-list/profile-list.component.html
+++ b/uitwerking/src/app/profile/profile-list/profile-list.component.html
@@ -14,7 +14,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let profile of profiles | profileFilter:listFilter">
+      <tr *ngFor="let profile of filteredProfiles">
         <th scope="row">{{profile.id}}</th>
         <td><a [routerLink]="['/profile', profile.id]">{{profile.name}}</a></td>
         <td>{{profile.email}}</td>
