--- a/uitwerking/src/app/home/home.component.html
+++ b/uitwerking/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<h1>Hello</h1>
+<div class="home">
+    <br/>
+    <h1>Welkom</h1>
+    <img class="home-img" src="../../assets/images/angular.svg" />
+</div>
